2007-05-01  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/application.rb (ApplicationController::authorize): Move from LoginController.

2007-04-24  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Small fix.

2007-04-21  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/login/preview_article.rhtml: Add "reedit" function.

2007-04-20  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/login/form_article.rhtml: Add <hr>.

	* donrails/app/views/login/shared/table_{article,comment}.rhtml: added magic character for recognize utf-8.

	* donrails/app/views/login/form_article.rhtml: modify in tagoh's fix in r215.
	
2007-04-20  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/login/form_article.rhtml: Fix to select the
	format recently used at new_article.

2007-04-15  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/login/shared/table_article.rhtml: New file. It spins off from 'login/manage_article'.
	* donrails/app/views/login/manage_article.rhtml: Change to use it.

	* donrails/app/views/login/form_article.rhtml: Small fix to use default article format.

	* donrails/config/routes.rb: Order change to use '/archives/show_category'.

	* donrails/app/views/login/shared/table_trackback.rhtml: move file.
	* donrails/app/views/login/manage_trackback.rhtml: Change to use it.

	* donrails/app/views/login/shared/edit_don_rbl.rhtml: move file.
	* donrails/app/views/login/manage_don_rbl.rhtml: Change to use it.
	
	* donrails/app/views/login/manage_comment.rhtml: Change to use it.
	* donrails/app/views/login/shared/table_comment.rhtml: move file.

	* donrails/app/views/login/shared/edit_don_env.rhtml: move file.
	* donrails/app/views/login/manage_don_env.rhtml: Change to use it.

	* donrails/app/views/login/shared/edit_category.rhtml: move file.
	* donrails/app/views/login/manage_category.rhtml: Change to use it.
	